--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="section text-center">
             <div class="container">
                 <div class="row">
-                    <img src="/Users/valentinalombardo/Documents/WebSite/grigio_chiaro.jpg" width="120" class="center-block img-responsive">
+                    <img src="grigio_chiaro.jpg" width="120" class="center-block img-responsive">
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -49,25 +49,25 @@
                         <p></p>
                     </div>
                     <div class="col-md-2 text-center">
-                        <a href="castiglioni_1.html"><img src="/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Castiglioni/09_castiglioni_copertina.jpg" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Castiglioni/09_castiglioni_IF.jpg'" onmouseout="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Castiglioni/09_castiglioni_copertina.jpg'" class="center-block img-circle img-responsive" width="300"></a>&nbsp;
-                        <a href="magnago_1.html"><img src="/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Magnago/06_magnago_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Magnago/06_magnago_IF.jpg'" onmouseout="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Magnago/06_magnago_copertina.jpg'"></a>
+                        <a href="castiglioni_1.html"><img src="immaginiWeb/WebSite_Castiglioni/09_castiglioni_copertina.jpg" onmouseover="this.src='immaginiWeb/WebSite_Castiglioni/09_castiglioni_IF.jpg'" onmouseout="this.src='immaginiWeb/WebSite_Castiglioni/09_castiglioni_copertina.jpg'" class="center-block img-circle img-responsive" width="300"></a>&nbsp;
+                        <a href="magnago_1.html"><img src="immaginiWeb/WebSite_Magnago/06_magnago_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Magnago/06_magnago_IF.jpg'" onmouseout="this.src='immaginiWeb/WebSite_Magnago/06_magnago_copertina.jpg'"></a>
                     </div>
                     <div class="col-md-2 text-center">
-                        <a href="rimoldi_1.html"><img src=" /Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Rimoldi/10_rimoldi_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Rimoldi/10_rimoldi_IF.jpg'" onmouseout="this.src=' /Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Rimoldi/10_rimoldi_copertina.jpg'"></a>&nbsp;
-                        <a href="tacchini_1.html"><img src=" /Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Tacchini/00_tacchini_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Tacchini/00_tacchini_IF.jpg'" onmouseout="this.src=' /Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Tacchini/00_tacchini_copertina.jpg'"></a>
+                        <a href="rimoldi_1.html"><img src=" immaginiWeb/WebSite_Rimoldi/10_rimoldi_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Rimoldi/10_rimoldi_IF.jpg'" onmouseout="this.src=' immaginiWeb/WebSite_Rimoldi/10_rimoldi_copertina.jpg'"></a>&nbsp;
+                        <a href="tacchini_1.html"><img src=" immaginiWeb/WebSite_Tacchini/00_tacchini_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Tacchini/00_tacchini_IF.jpg'" onmouseout="this.src=' immaginiWeb/WebSite_Tacchini/00_tacchini_copertina.jpg'"></a>
                     </div>
                     <div class="col-md-2 text-center">
-                        <a href="colombo_1.html"><img src="/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Colombo/13_colombo_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Colombo/13_colombo_IF.jpg'" onmouseout="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Colombo/13_colombo_copertina.jpg'"></a>&nbsp;
-                        <a href="girlanda_1.html"><img src="/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Girlanda/13_girlanda_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Girlanda/13_girlanda_IF.jpg'" onmouseout="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Girlanda/13_girlanda_copertina.jpg'"></a>
+                        <a href="colombo_1.html"><img src="immaginiWeb/WebSite_Colombo/13_colombo_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Colombo/13_colombo_IF.jpg'" onmouseout="this.src='immaginiWeb/WebSite_Colombo/13_colombo_copertina.jpg'"></a>&nbsp;
+                        <a href="girlanda_1.html"><img src="immaginiWeb/WebSite_Girlanda/13_girlanda_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Girlanda/13_girlanda_IF.jpg'" onmouseout="this.src='immaginiWeb/WebSite_Girlanda/13_girlanda_copertina.jpg'"></a>
                     </div>
                     <div class="col-md-2">
-                        <a href="briosco.html"><img src="/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Briosco/10_briosco_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Briosco/10_briosco_IF.jpg'" onmouseout="this.src='/Users/valentinalombardo/Documents/WebSite/immaginiWeb/WebSite_Briosco/10_briosco_copertina.jpg'"></a>&nbsp;
+                        <a href="briosco.html"><img src="immaginiWeb/WebSite_Briosco/10_briosco_copertina.jpg" class="center-block img-circle img-responsive" width="300" onmouseover="this.src='immaginiWeb/WebSite_Briosco/10_briosco_IF.jpg'" onmouseout="this.src='immaginiWeb/WebSite_Briosco/10_briosco_copertina.jpg'"></a>&nbsp;
                         <p></p>
                         <p></p>
                     </div>
                 </div>
             </div>
         </div>
-    
+
 
 </body></html>
