update home page file

--- a/colombo_8.html
+++ b/colombo_8.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="Homepage.html">home</a>
+                            <a href="index.html">home</a>
                         </li>
                         <li>
                             <a href="about.html">info</a>
