--- a/piazza_santAgostino.html
+++ b/piazza_santAgostino.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active">
-              <a href="Homepage.html">home</a>
+              <a href="index.html">home</a>
             </li>
             <li>
               <a href="about.html">about</a>
